# ChordPlusPlus

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.ini  hostcert.crt  hostkey.pem  script.txt  show_nodes.txt
analytics/: network.ipynb
api/: CMakeLists.txt  api.h
cmake/: CPM.cmake
dht/: CMakeLists.txt
docs/: Final_report.md  Midterm_report.md  initial_report.md
docs/assets/: class_diagram.mdj
docs/f_assets/: 1200px-DHT_en.svg.png:Zone.Identifier
lib/asio/: CMakeLists.txt
src/: CMakeLists.txt  centralLogControl.h  dht-4.cpp
src/api/: CMakeLists.txt  ConnectionHandler.h  api.cpp  api.h  connection.cpp  connection.h  main.cpp  message_data.cpp  message_data.h  request.cpp  request.h  request_data.cpp  request_data.h
src/config/: CMakeLists.txt  centralLogControl.h  config.cpp  config.h  main.cpp
src/dht/: CMakeLists.txt  Dht.cpp  Dht.h  NodeInformation.cpp  NodeInformation.h  Peer.cpp  Peer.h  dht.cpp  dht.h  main.cpp
src/dht/schemas/: peer.capnp  person.capnp
src/entry/: CMakeLists.txt  entry.cpp  entry.h
src/logging/: CMakeLists.txt  centralLogControl.h  dummy.cpp
src/p2p/: CMakeLists.txt  main.cpp  p2p.cpp  p2p.h  peer.h
src/p2p/schemas/: peer.capnp
src/rpc/: CMakeLists.txt  SecureRpcClient.cpp  SecureRpcClient.h  SecureRpcContext.h  SecureRpcServer.cpp  SecureRpcServer.h  main.cpp  rpc.cpp  rpc.h
src/rpc/schemas/: example.capnp
src/util/: CMakeLists.txt  constants.h  util.cpp  util.h
test/: CMakeLists.txt  assertions.h  foo.cpp  test_api.cpp  test_assert.h  test_util.cpp
